track ng-repeats by post.ID to avoid flicker on load more

--- a/src/sass/_animate.scss
+++ b/src/sass/_animate.scss
@@ -21,3 +21,14 @@
 [ui-view].ng-leave-active {
   opacity: 0;
 }
+
+/* The starting CSS styles for the enter animation */
+.fade.ng-enter {
+  transition: 0.5s linear all;
+  opacity: 0;
+}
+
+/* The finishing CSS styles for the enter animation */
+.fade.ng-enter.ng-enter-active {
+  opacity: 1;
+}
